--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,14 @@
 .App {
   display: flex;
+  /* width: 80%;   */
+  /* flex-direction: column; */
   justify-content: center;  
-  
 }
 
 .currency-exchange-widget {
   display: flex;
   flex-direction: column;
+  /* flex-grow: 1; */
   margin: 10px;
 }
 
@@ -14,24 +16,24 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 15px;
+  padding: 35px 15px 35px 15px;
   /* padding-bottom: 5px; */
   /* font-weight: bold; */
 }
 
 .currency-name {
   cursor: pointer;
-  font-size: 20px;  
+  font-size: 25px;  
 }
 
 .currency-exchange-balance {
   color: rgb(139, 149, 158);
-  font-size: 10px;  
+  font-size: 12px;  
 }
 
 .currency-input {
-  font-size: 20px;
-  height: 20px;
+  font-size: 25px;
+  height: 25px;
 }
 
 .currency-buy {
@@ -51,21 +53,35 @@
   flex-direction: row;
   justify-content: space-between;
   font-size: 11px;
-  background:linear-gradient(180deg,white 50%, rgb(243, 244, 245) 50%);
+  background:linear-gradient(0deg, rgb(243, 244, 245) 50%, white 50%);
 }
 
 .currency-swap {
-  height: 20px;
-  width: 20px;
+  height: 25px;
+  width: 25px;
   text-align: center;
   border: 2px solid rgb(243, 244, 245);
   border-radius: 15px;
-  margin: 0 5px 0 5px;
+  margin: 0 15px;
   color: rgb(0, 117, 235);
   /* font-weight: bold; */
-  font-size: 18x;
+  font-size: 18px;
   cursor: pointer;
   background-color:white;
+  vertical-align: middle;
+  line-height: 25px;
+}
+
+.exchange-rate {
+  text-align: center;
+  border: 2px solid rgb(243, 244, 245);
+  border-radius: 15px;
+  /* margin: 0 auto 0 auto; */
+  color: rgb(0, 117, 235);
+  background-color:white;
+  font-size: 15px;
+  vertical-align: middle;
+  line-height: 25px;
 }
 
 .button-area {
@@ -73,24 +89,14 @@
   display: flex;
   flex-direction: column-reverse;
   background-color:  rgb(243, 244, 245);
-  padding: 15px;
+  padding-bottom: 40px;
 }
 
 .button-exchange {
-  width: 75%;
-  height: 30px !important;
+  width: 90%;
+  height: 45px !important;
   margin: 0 auto 0 auto !important;
-  border-radius: 15px !important;  
-}
-
-.exchange-rate {
-  text-align: center;
-  border: 2px solid rgb(243, 244, 245);
-  border-radius: 15px;
-  margin: 0 auto 0 auto;
-  color: rgb(0, 117, 235);
-  background-color:white;
-  /* font-weight: bold; */
+  border-radius: 22.5px !important;  
 }
 
 .currency-list {
@@ -113,29 +119,4 @@
 
 .currency-list-item-other {
   border-top: 2px solid rgb(243, 244, 245);;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
