--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   justify-content: center;
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 768px) {
   .currency-exchange-widget {
     border-radius: 22.5px;
     border: solid gray 10px;
@@ -132,6 +132,12 @@
 .currency-list {
   max-height: 500px;
   overflow: auto;
+}
+
+@media only screen and (max-height: 600px) {
+  .currency-list {
+    max-height: calc(80vh);
+  }
 }
 
 .currency-list-title {
